launchpad-buildd (161) UNRELEASED; urgency=medium

  * Pass build URL to snapcraft using SNAPCRAFT_IMAGE_INFO.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 04 Apr 2018 17:03:14 +0100

launchpad-buildd (160) xenial; urgency=medium

  * Install sudo if installing snapcraft as a snap, since in that case
    snapcraft's usual dependency on it is ineffective.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 23 Mar 2018 22:43:38 +0000

launchpad-buildd (159) xenial; urgency=medium

  * Allow all snapd services in the policy-rc.d we install in LXD
    containers; for better or worse, snapd.postinst (via deb-systemd-invoke)
    won't start any of them, including snapd itself, if any of them is
    forbidden.  Mask snapd.refresh.timer so that it doesn't cause trouble.
  * Allow optionally installing snapcraft as a snap (LP: #1737994).
  * If Launchpad passes a build_url item in the extra build arguments, then
    emit it at the start of the log.
  * Make buildd-slave.tac compatible with Twisted >= 17.1.0, which drops
    support for passing an unqualified port to strports.service.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 23 Mar 2018 07:53:24 +0000

launchpad-buildd (158) xenial; urgency=medium

  [ Steve Langasek ]
  * Support passing a snap channel into a livefs build through the
    environment.

  [ Christopher Glass ]
  * Add support for passing apt proxies to live-build.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 15 Jan 2018 10:04:42 +0000

launchpad-buildd (157) xenial; urgency=medium

  [ Colin Watson ]
  * Normalise Python packaging.  We now install our modules on the normal
    system path, using pybuild.  setup.py now installs buildd-slave.tac in
    the lpbuildd package rather than data_files in order not to pollute the
    top level of a virtualenv.
  * Fall back to the package name from AC_INIT when expanding $(PACKAGE) in
    translation configuration files if no other definition can be found.