@@ -1,6 +1,8 @@
 launchpad-buildd (161) UNRELEASED; urgency=medium
 
   * Pass build URL to snapcraft using SNAPCRAFT_IMAGE_INFO.
+  * Add an option to generate source tarballs for snaps after pulling
+    external dependencies (LP: #1763639).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Wed, 04 Apr 2018 17:03:14 +0100
 
